# apache-airflow-providers-alembic

./: .astro-registry.yaml  .gitignore  README.md  setup.cfg
airflow/providers/: package.py
airflow_provider_alembic/: __init__.py
airflow_provider_alembic/example_dags/: example_alembic.py
airflow_provider_alembic/operators/: alembic.py
astronomer/providers/: package.py
astronomer/providers/alembic/: README.md
astronomer/providers/alembic/hooks/: alembic.py
astronomer/providers/alembic/operators/: alembic.py
astronomer/providers/alembic/plugin/: alembic.py
