[metadata]
name = apache_airflow_provider_alembic
version = 0.1.0
url = https://github.com/astronomer/apache-airflow-provider-alembic/
author = Astronomer
author_email = humans@astronomer.io
description = Apache Airflow Providers containing Operators and Plugins from Astronomer
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Apache Airflow
    Framework :: Apache Airflow :: Provider
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code=https://github.com/astronomer/apache-airflow-provider-alembic
    Homepage=https://astronomer.io/

[options]
python_requires = >=3.7
packages = find_namespace:
include_package_data = true
namespace_packages = astronomer,astronomer.providers
install_requires =
    apache-airflow>2.0.0
    alembic
zip_safe = false

[options.packages.find]
include =
    astronomer.*

[options.entry_points]
apache_airflow_provider=
  provider_info=astronomer.providers.package:get_provider_info
